<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <ImageView
        android:id="@+id/header_background"
        android:layout_width="412dp"
        android:layout_height="291dp"
        android:transitionName="background_image_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header_dubrovnik"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/down_arrow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        app:layout_constraintEnd_toEndOf="@+id/header_background"
        app:layout_constraintTop_toTopOf="@+id/header_background"
        android:src="@drawable/ic_down_arrow" />

    <ScrollView
        android:id="@+id/third_scrillview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/third_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extra_bold"
                android:text="@string/textView5"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/AboutDubrovnik"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/znamenitosti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/znamenitosti"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/StariDioGrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/znam1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/StariDioGradaTekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/starigrad_tekst"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/Zidine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/znam2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/ZidineTekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/zidine_tekst"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Srdj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/znam3"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/SrdjTekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/srdj_tekst"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/specijaliteti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/specijaliteti"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/spec1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/hrana1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hrana_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/hrana1_tekst"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/spec2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/hrana2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hrana2_tekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/hrana2_tekst"
                android:textColor="@color/black"
                android:textSize="15sp" />





        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

