<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthActivity">

    <ImageView
        android:id="@+id/header_background3"
        android:layout_width="412dp"
        android:layout_height="291dp"
        android:transitionName="background_image_transition3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pula"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/down_arrow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        app:layout_constraintEnd_toEndOf="@+id/header_background3"
        app:layout_constraintTop_toTopOf="@+id/header_background3"
        android:src="@drawable/ic_down_arrow" />

    <ScrollView
        android:id="@+id/fifth_scrillview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/third_title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extra_bold"
                android:text="@string/pula"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/about3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/aboutPula"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/about_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/PulaPu"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/znamenitosti3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/znamenitosti"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Amfiteatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/znamPu"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/znamPUTEKST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/znamPUTekst"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/Brijuni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/brijuni"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/brijunitekst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/brijuniTEKST"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/specijaliteti3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/specijaliteti"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hrana13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/fuzii"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hrana_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/tekst"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hrana113"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/supica"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hrana_text113"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/tekstic"
                android:textColor="@color/black"
                android:textSize="15sp" />



        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>