<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeventhActivity">

    <ImageView
        android:id="@+id/header_background5"
        android:layout_width="412dp"
        android:layout_height="291dp"
        android:transitionName="background_image_transition5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orion"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/down_arrow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        app:layout_constraintEnd_toEndOf="@+id/header_background5"
        app:layout_constraintTop_toTopOf="@+id/header_background5"
        android:src="@drawable/ic_down_arrow" />

    <ScrollView
        android:id="@+id/seventh_scrillview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_background5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/third_title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_extra_bold"
                android:text="@string/vinkovci"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/about5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/o_vinkovcima"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/about_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/vk"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/znamenitosti5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/zanimljivosti"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/vkj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/vkj1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/vkjTEKST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/vkjtekst"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/specijaliteti5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/specijaliteti"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hrana15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/fi_paprika"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/hrana_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/fii"
                android:textColor="@color/black"
                android:textSize="15sp" />



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>